css/styles.css
/* ... */
.navbar .launcher:hover {
    background: rgba(255, 255, 255, 0.2);
    color: #fff;
}

#lockscreen {
    position: absolute;
    display: none;
    width: 100%;
    height: 100%;
    z-index: 100;
    background: #757575;
    background-image: url("../resources/lockscreen.jpg");
    background-size: cover;
}

#lockscreen h3 {
    position: absolute;
    margin: 0;
    left: 0;
    right: 0;
    margin: var(--lockscreen-h3-margin);
    text-align: center;
    font-size: var(--lockscreen-h3-font-size);
    font-weight: 300;
    color: #fff;
}

button {
    cursor: pointer;
    text-transform: uppercase;
}

.icon_round_button {
    position: relative;
    border-radius: 50%;
}

.icon_round_button .material-icons {
    position: absolute;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-12px, -12px);
    transform: translate(-12px, -12px);
    line-height: 24px;
    width: 24px;
}

.text_round_button {
    border-radius: 50px;
    padding: 0 18px;
    text-align: center;
}

#lock_options_button {
    width: 48px;
    height: 48px;
    position: absolute;
    background: transparent;
    border: 2px solid #fff;
    bottom: 16px;
    right: 16px;
}

#lock_options_button i {
    color: #fff
}

.lock_options {
    height: 48px;
    position: absolute;
    display: none;
    background: transparent;
    bottom: 16px;
    right: 16px;
    opacity: 0;
}

.lock_options.active {
    display: flex;
}

.lock_options .container {
    display: inline-flex;
}

.lock_options button {
    height: 48px;
    min-width: 48px;
    background: transparent;
    border: 2px solid #fff;
    color: #fff;
    margin-left: 16px;
}

.lock_options button i {
    color: #fff;
}

.status_bar {
    position: absolute;
    left: 0;
    right: 0;
    width: var(--status-bar-width);
    height: 50px;
    color: #fff;
    display: grid;
    margin: 45vh auto 50px;
    grid-template-columns: var(--status-bar-grid-columns);
    cursor: default;
    transition: opacity 0.4s ease;
    z-index: 1;
}

.menu_status_bar {
    width: 100%;
    color: #616161;
    display: grid;
    grid-template-columns: var(--menu-status-bar-grid-columns);
    cursor: default;
    transition: opacity 0.4s ease;
    z-index: 1;
}

.status_date {
    height: 100%;
    display: flex;
    margin: 0 8px 0 45px;
}

.status_hour {
    font-size: 45px;
    align-self: center;
}

.status_date h4 {
    margin: 0 0 0 12px;
    line-height: 24px;
}

.status_location {
    font-weight: 400;
}

.status, .status div {
    align-self: center;
    display: flex;
    align-items: flex-end;
    margin: auto 16px auto auto;
}

.status div {
    padding: 12px;
}

.status div span {
    padding-right: 8px;
    font-size: 16px;
}

.fuchsia img {
    width: 50px;
    height: 50px;
    left: 0;
    right: 0;
    bottom: 0;
    display: flex;
    background: #fff;
    border-radius: 50%;
    margin: auto;
    padding: 2px;
    object-fit: cover;
    cursor: pointer;
    transition: all 0.5s ease;
    z-index: 100;
}

.fuchsia.active img {
    width: 60px;
    height: 60px;
    bottom: 235px;
}

.main {
    padding: 16px;
    margin-bottom: 30px;
    height: 768px;
    /* Used in this example to enable scrolling */
}

.mdlnotify {
    background: #fff;
    border-radius: 3px;
    height: 400px;
    width: 600px;
    box-shadow: 0px 0px 10px #000;
    margin-top: 150px;
}

.iconf {
    float: left;
    height: 50px;
    width: 50px;
    margin-top: 15px;
    margin-left: 20px;
}

.obfuscator {
    position: absolute;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.5);
}

.menu_image_container {
    position: absolute;
    display: block;
    width: auto;
    height: auto;
    margin: auto;
    left: 0;
    right: 0;
    top: 0;
    z-index: 99;
    transition: all 0.4s ease;
}

.fuchsia.active .menu_image_container {
    top: -150px;
}

.menu {
    position: absolute;
    display: none;
    right: 0;
    bottom: 50px;
    background: #eee;
    width: 350px;
    border-radius: 2px;
}

.menu_option {
    display: flex;
    padding: 8px;
    background: #fff;
    cursor: pointer;
}

#menu {
    -webkit-box-shadow: 1px 2px 10px 2px rgba(0, 0, 0, 0.3);
    -moz-box-shadow: 1px 2px 10px 2px rgba(0, 0, 0, 0.3);
    box-shadow: 1px 2px 10px 2px rgba(0, 0, 0, 0.3);
    border: 1px solid #BDBDBD;
    z-index: 99;
    bottom: 40px;
    margin: auto;
    overflow: hidden;
    transition: all 0.5s ease;
    z-index: 99;
    background: #fff;
}

#menu_2 {
    position: relative;
    width: 0;
    height: var(--menu-active-height);
    max-height: 0;
    border-radius: 50%;
    display: block;
    left: 0;
    right: 0;
    bottom: 0;
    margin: auto;
    margin-top: -30px;
    overflow: hidden;
    transition: all 0.4s ease;
    z-index: -1;
    background: #fff;
}

#menu_2 .menu_option {
    padding: 8px 40px;
    width: 80%;
    margin: 0 auto;
    align-items: center;
}

#menu_2 .menu_option:hover {
    background: #fff;
}

#menu_2 .menu_option:last-child {
    padding-top: 4px;
}

#menu_2 .menu_option:last-child button {
    margin: auto;
    top: -14px;
}

#menu_2 .menu_quick_settings {
    display: grid;
    grid-template-columns: var(--menu-quick-settings-columns);
    grid-row-gap: 20px;
}

#menu_2 .menu_quick_option {
    display: grid;
    text-align: center;
}

#menu_2 .option_title {
    width: 100%;
    margin: 0;
    padding: 8px 0;
    color: #212121;
}

#menu_2 .menu_quick_settings button, #menu_2 .menu_option button {
    width: 40px;
    min-width: 40px;
    height: 40px;
    background: #E0E0E0;
    margin: 0 auto;
    box-shadow: none;
}

#menu_2 .menu_quick_settings button.active, #menu_2 .menu_option button.active {
    background: #1976D2
}

#menu_2 .menu_quick_settings button:focus, #menu_2 .menu_option button:focus {
    box-shadow: none;
}

#menu_2 .menu_quick_settings button.active:hover {
    background: #1976D2;
    -webkit-tap-highlight-color: #1976D2;
    opacity: 1;
}
/* ... */

